# console-tetris

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  shapes.conf  test.sh  untitled.sublime-workspace  Додатки.docx  Записка.docx  Титул на папку.docx  Титули + Анотація.docx
.github/workflows/: docker-image.yml
bin_linux/: console_tetris
git_test/: kuruch.txt  pylypchuk.txt
src/: ActiveShape.cpp  ActiveShape.h  GameField.cpp  GameField.h  Gui.cpp  Gui.h  Main.cpp  Messages.h  NcursesReference.cpp_ignore  Shape.cpp  Shape.h  ShapeLoader.cpp  ShapeLoader.h  ShapeState.cpp  ShapeState.h
tests/: Main.cpp  ShapeTest.cpp  ShapeTest.h
